--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,135 +15,131 @@
 
 <body>
 
-    <div id="top-content" >
-        <div class="row">
-            <div id="image-name" class="col-auto">
+    <div id="top-content">
+        <div id="row">
+            <div id="image" class="col-xs-12 col-md-5 col-xl-2">
                 <img id="profile-photo" src="img.jpg" />
-
-                <div id="name-container">
-                    <h3 id="name">
-                        Ahmed Allam
-                    </h3>
-                    <h3 id="email">
-                        ahmedeallam@aucegypt.edu
-                    </h3>
-                </div>
             </div>
 
-            <div id="basic-info" class="col-auto">
-                <div>
-                    <div id="id" class="name">
-                        <span>
-                            ID
-                        </span>
+            <div id="name-container" class="col-xs-12 col-md-7 col-xl-3">
+                <h3 id="name">
+                    Ahmed Allam
+                </h3>
+                <h3 id="email">
+                    ahmedeallam@aucegypt.edu
+                </h3>
+            </div>
 
-                        <span class="value">
-                            900214493
-                        </span>
+            <div id="basic-info" class="col-sm-10 offset-xl-1 col-xl-6 float-right">
+                <div id="id">
+                    <span class="name">
+                        ID
+                    </span>
 
-                    </div>
+                    <span class="value">
+                        900214493
+                    </span>
 
-                    <div id="birthdate">
-                        <span class="name">
-                            Birthdate
-                        </span>
-
-                        <span class="value">
-                            08-09-2003
-                        </span>
-                    </div>
-
-                    <div id="city">
-                        <span class="name">
-                            city
-                        </span>
-
-                        <span class="value">
-                            Cairo, Egypt
-                        </span>
-
-                    </div>
-
-                    <div id="blood-type">
-                        <span class="name">
-                            Blood Type
-                        </span>
-
-                        <span class="value">
-                            A-
-                        </span>
-
-                    </div>
-
-                    <div id="phone">
-                        <span class="name">
-                            Phone
-                        </span>
-
-                        <span class="value">
-                            +201553554224
-                        </span>
-
-                    </div>
                 </div>
 
-                <div>
-                    <div id="height">
-                        <span class="name">
-                            Height
-                        </span>
+                <div id="birthdate">
+                    <span class="name">
+                        Birthdate
+                    </span>
 
-                        <span class="value">
-                            186cm
-                        </span>
+                    <span class="value">
+                        08-09-2003
+                    </span>
+                </div>
 
-                    </div>
+                <div id="city">
+                    <span class="name">
+                        City
+                    </span>
 
-                    <div id="weight">
-                        <span class="name">
-                            Weight
-                        </span>
+                    <span class="value">
+                        Cairo, Egypt
+                    </span>
 
-                        <span class="value">
-                            75KG
-                        </span>
+                </div>
 
-                    </div>
+                <div id="blood-type">
+                    <span class="name">
+                        Blood Type
+                    </span>
 
-                    <div id="martial-status">
-                        <span class="name">
-                            Martial Status
-                        </span>
+                    <span class="value">
+                        A-
+                    </span>
 
-                        <span class="value">
-                            Single
-                        </span>
+                </div>
 
-                    </div>
+                <div id="phone">
+                    <span class="name">
+                        Phone
+                    </span>
 
-                    <div id="gender">
-                        <span class="name">
-                            Gender
-                        </span>
+                    <span class="value">
+                        +201553554224
+                    </span>
 
-                        <span class="value">
-                            Male
-                        </span>
+                </div>
 
-                    </div>
+                <div id="height">
+                    <span class="name">
+                        Height
+                    </span>
 
-                    <div id="emergency-contacts">
-                        <span class="name">
-                            Emergency Contacts
-                        </span>
+                    <span class="value">
+                        186cm
+                    </span>
 
-                        <span class="value">
-                            Mother: +2012345678
-                            </br>
-                            Father: +2012345678
-                        </span>
+                </div>
 
-                    </div>
+                <div id="weight">
+                    <span class="name">
+                        Weight
+                    </span>
+
+                    <span class="value">
+                        75KG
+                    </span>
+
+                </div>
+
+                <div id="martial-status">
+                    <span class="name">
+                        Martial Status
+                    </span>
+
+                    <span class="value">
+                        Single
+                    </span>
+
+                </div>
+
+                <div id="gender">
+                    <span class="name">
+                        Gender
+                    </span>
+
+                    <span class="value">
+                        Male
+                    </span>
+
+                </div>
+
+                <div id="emergency-contacts">
+                    <span class="name">
+                        Emergency Contacts
+                    </span>
+
+                    <span class="value">
+                        Mother: +2012345678
+                        </br>
+                        Father: +2012345678
+                    </span>
+
                 </div>
             </div>
         </div>
