Finished the medications section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,98 @@
                 Medications
             </h2>
 
+            <div class="row no-gutters">
+
+                <div class="col-md-6 col-xs-12">
+                    <div class="record-item">
+
+                        <img class="medication-image" src="medi3.jpg" />
+
+                        <div>
+                            <div class="medication-title">
+                                <span>
+                                    Lisinopril
+                                </span>
+                            </div>
+
+                            <div class="medication-date">
+                                <span>
+                                    Since: 19-8-2021
+                                </span>
+                            </div>
+
+                            <div class="medication-details">
+                                <span>
+                                    Used to treat high blood pressure, heart failure                                    <br />
+                                    Dose: 600mg daily before meals
+                                </span>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-xs-12">
+                    <div class="record-item">
+
+                        <img class="medication-image" src="medi1.webp" />
+
+                        <div>
+                            <div class="medication-title">
+                                <span>
+                                    Metformin
+                                </span>
+                            </div>
+
+                            <div class="medication-date">
+                                <span>
+                                    Since: 12-12-2020
+                                </span>
+                            </div>
+
+                            <div class="medication-details">
+                                <span>
+                                    Used to treat type 2 Diabetes.
+                                    <br />
+                                    Dose: 500mg daily after meals
+                                </span>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-xs-12">
+                    <div class="record-item">
+
+                        <img class="medication-image" src="medi2.jpeg" />
+
+                        <div>
+                            <div class="medication-title">
+                                <span>
+                                    Amoxicillin
+                                </span>
+                            </div>
+
+                            <div class="medication-date">
+                                <span>
+                                   Since: 31-1-2022
+                                </span>
+                            </div>
+
+                            <div class="medication-details">
+                                <span>
+                                    An antibiotic used to treat a number of bacterial infections                                    <br />
+                                    Dose: 200mg twice a day before meals
+                                </span>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
         <div id="prescriptions">
